Minor non-coding modification

--- a/app/views/user/cart.hbs
+++ b/app/views/user/cart.hbs
@@ -183,8 +183,8 @@ a:hover{
 
                             </div>
 
-                            <div class="col"> <b>Price:</b><br>₹{{this.price}}</div>
-                            <div class="col"> <b>Actual Total:</b><br>{{this.totalAmount}}</div>
+                            <div class="col"> <b>Price:</b><br>₹ {{this.price}}</div>
+                            <div class="col"> <b>Actual Total:</b><br>₹ {{this.totalAmount}}</div>
 
                             {{#if (gt this.productOfferPercentage 0)}}
                                 <div class="col"> <b>Product Discount:</b><br><span style="color: chartreuse;"><b>{{this.productOfferPercentage}}%</b></span></div>
