--- a/app/views/admin/view-products.hbs
+++ b/app/views/admin/view-products.hbs
@@ -43,7 +43,7 @@
                         <td>{{this.description}}</td>
                         <td>{{this.category.name}}</td>
                         <td>₹ {{this.price}}</td>
-                        <td><img style="width: 50px; height: 50px" src="/product-images/{{this._id}}.jpg" alt="{{this.name}}"></td>
+                        <td><img style="width: 50px; height: 50px" src="/product-images/{{images.[0]}}" alt="{{this.name}}"></td>
                         <td>{{this.productOffer}} %</td>
                         <td>
                             
