Modified view files

--- a/app/views/admin/add-product-category.hbs
+++ b/app/views/admin/add-product-category.hbs
@@ -27,7 +27,7 @@
       <div class="form-group">
         <label for="image">Image:</label>
         <div class="custom-file">
-          <input type="file" class="custom-file-input" id="image" name="category-image" accept="image/*" required>
+          <input type="file" class="custom-file-input" id="category-image" name="category-image" accept="image/*" required>
           <label class="custom-file-label" for="image">Choose file</label>
         </div>
         <div id="image-preview" class="mt-2"></div>
