--- a/app/views/admin/view-product-categories.hbs
+++ b/app/views/admin/view-product-categories.hbs
@@ -41,7 +41,7 @@
                     <td scope="row">{{this.creatorDetails.name}}</td>
                     <td scope="row">{{this.createdOn}}</td>
                     <td scope="row">{{this.description}}</td>
-                    <td><img style="width: 50px; height: 50px" src="/product-category-images/{{this._id}}.jpg" alt="{{this.name}}"></td>
+                    <td><img style="width: 50px; height: 50px" src="/product-category-images/{{this.categoryImage}}" alt="{{this.name}}"></td>
                     <th style="color: coral;">{{this.categoryOffer}} %</th>
                     <td>
                     
