Minor modification in button title

--- a/app/views/admin/add-product-category.hbs
+++ b/app/views/admin/add-product-category.hbs
@@ -32,7 +32,7 @@
         </div>
         <div id="image-preview" class="mt-2"></div>
       </div>
-      <button type="submit" class="btn btn-primary">Add Product</button>
+      <button type="submit" class="btn btn-primary">Add Category</button>
       <button type="reset" class="btn btn-secondary ml-2">Reset</button>
     </form>
 
