Configured images in cart and checkout page
Modified a helper for the same

--- a/app/views/user/cart.hbs
+++ b/app/views/user/cart.hbs
@@ -163,7 +163,7 @@ a:hover{
 
                         <div class="row main align-items-center">
 
-                            <div class="col-2"><img class="img-fluid" style="height: 100px; width:100px " src="/product-images/{{this.productId}}.jpg"></div>
+                            <div class="col-2"><img class="img-fluid" style="height: 100px; width:100px " src="/product-images/{{images.[0]}}"></div>
 
                             <div class="col">
 
