--- a/app/views/user/place-order.hbs
+++ b/app/views/user/place-order.hbs
@@ -367,7 +367,7 @@
                                             <div class="row  justify-content-between">
                                                 <div class="col-auto col-md-7">
                                                     <div class="media flex-column flex-sm-row">
-                                                        <img class=" img-fluid" src="/product-images/{{this.product._id}}.jpg"
+                                                        <img class=" img-fluid" src="/product-images/{{product.images.[0]}}"
                                                             width="62" height="62">
                                                         <div class="media-body  my-auto">
                                                             <div class="row ">
