--- a/app/views/user/ordered-product-details.hbs
+++ b/app/views/user/ordered-product-details.hbs
@@ -6,9 +6,6 @@
 
     <hr>
 
-    <p class="text-center">Order Date & Time:</span></p>
-    <p class="text-center"><span class="order-date">{{this.orderDate}}</span></p>
-
     <br>
     <br>
 
@@ -18,7 +15,7 @@
 
         <div class="col-md-4" style="width: 15rem; height: 23rem;">
           <div class="card mb-4">
-            <img src="/product-images/{{this.product._id}}.jpg" class="card-img-top" style="height: 180px; width: 180px" alt="{{this.product.name}}">
+            <img src="/product-images/{{product.images.[0]}}" class="card-img-top" style="height: 180px; width: 180px" alt="{{this.product.name}}">
             <div class="card-body">
               <h5 class="card-title">{{this.product.name}}</h5>
               <p class="card-text">{{this.product.description}}</p>
@@ -31,6 +28,49 @@
       {{/each}}
 
     </div>
+
+
+    {{!-- ======================================== Order Detail Display ======================================== --}}
+    <div>
+      <div class="card text-center">
+        <div class="card-header" style="color: cornflowerblue;">
+          Order Details
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Order Status : {{orderData.[0].orderStatus}} </h5>
+
+          <hr>
+
+          <p class="card-text"><s style="color: red;"> Actual Order Value : ₹{{orderData.[0].actualOrderValue}}</s></p>
+
+          {{#if (gt orderData.[0].couponDiscount 0)}}
+            <p class="card-text" style="color: chartreuse;"> Coupon Discount : ₹{{orderData.[0].couponDiscount}}</p>
+          {{/if}}
+
+          {{#if (gt orderData.[0].productOfferDiscount 0)}}
+            <p class="card-text" style="color: chartreuse;"> Product Offer Discount : ₹{{orderData.[0].productOfferDiscount}}</p>
+          {{/if}}
+
+          {{#if (gt orderData.[0].categoryOfferDiscount 0)}}
+            <p class="card-text" style="color: chartreuse;"> Category Offer Discount : ₹{{orderData.[0].categoryOfferDiscount}}</p>
+          {{/if}}
+
+          <br>
+
+          <p class="card-text" style="color: green;"> <b> Discounted Total : ₹ {{orderData.[0].orderValue}}</b></p>
+
+          <hr>
+
+          <p class="card-text"> Payment Method : {{orderData.[0].paymentMethod}}</p>
+          <p class="card-text"> Address Type : {{orderData.[0].deliveryDetails.addressType}}</p>
+          <p class="card-text"> Contact Number : {{orderData.[0].deliveryDetails.addressContactNumber}}</p>
+        </div>
+        <div class="card-footer text-muted">
+          <p class="text-center"><span class="order-date" style="color: cadetblue;">Order Date & Time: {{this.orderDate}}</span></p>
+        </div>
+      </div>
+    </div>
+
 
   </div>
 
