Added order Details to admin side ordered products view page.

--- a/app/views/admin/admin-single-order-summary.hbs
+++ b/app/views/admin/admin-single-order-summary.hbs
@@ -12,13 +12,6 @@
     {{/if}}
 
     <br>
-
-    <p class="text-center">Order Date & Time:</p>
-
-    <p class="text-center"><span class="order-date">{{orderDetails.date}}</span></p>
-
-
-    <br>
     <br>
 
     <div class="row justify-content-center">
@@ -39,8 +32,57 @@
 
     <br>
     <br>
-    <br>
-    <br>
+
+    {{!-- ======================================== Order Detail Display ======================================== --}}
+    <div>
+      <div class="card text-center">
+        <div class="card-header" style="color: cornflowerblue;">
+          Order Details
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Order Status : {{orderData.[0].orderStatus}} </h5>
+
+          <hr>
+
+          <p class="card-text" style="color: red;">Actual Order Value : ₹{{orderData.[0].actualOrderValue}}</p>
+
+          {{#if (gt orderData.[0].couponDiscount 0)}}
+            <p class="card-text" style="color: chartreuse;"> Coupon Discount : ₹{{orderData.[0].couponDiscount}}</p>
+          {{/if}}
+
+          {{#if (gt orderData.[0].productOfferDiscount 0)}}
+            <p class="card-text" style="color: chartreuse;"> Product Offer Discount : ₹{{orderData.[0].productOfferDiscount}}</p>
+          {{/if}}
+
+          {{#if (gt orderData.[0].categoryOfferDiscount 0)}}
+            <p class="card-text" style="color: chartreuse;"> Category Offer Discount : ₹{{orderData.[0].categoryOfferDiscount}}</p>
+          {{/if}}
+
+          <br>
+
+          <p class="card-text" style="color: green;"> <b> Discounted Total : ₹ {{orderData.[0].orderValue}}</b></p>
+
+          <hr>
+
+          <p class="card-text"> Payment Method : {{orderData.[0].paymentMethod}}</p>
+
+          <hr>
+
+          <h5 class="card-text"> <u>Delivery Details</u> </h5>
+          <br>
+          <p class="card-text"> Address Type : {{orderData.[0].deliveryDetails.addressType}}</p>
+          <p class="card-text"> Address : {{orderData.[0].deliveryDetails.addressLine1}} {{orderData.[0].deliveryDetails.addressLine2}}</p>
+          <p class="card-text"> Street, City : {{orderData.[0].deliveryDetails.addressStreet}} {{orderData.[0].deliveryDetails.addressCity}}</p>
+          <p class="card-text"> State, Country : {{orderData.[0].deliveryDetails.addressState}} {{orderData.[0].deliveryDetails.addressCountry}}</p>
+          <p class="card-text"> PIN Code : {{orderData.[0].deliveryDetails.addressPostalCode}}</p>
+          <br>
+          <p class="card-text"> Contact Number : {{orderData.[0].deliveryDetails.addressContactNumber}}</p>
+        </div>
+        <div class="card-footer text-muted">
+          <p class="text-center"><span class="order-date" style="color: cadetblue;">Order Date & Time: {{orderDetails.date}}</span></p>
+        </div>
+      </div>
+    </div>
 
   </div>
 </section>
