Modified to load product image

--- a/app/views/user/manage-wishlist.hbs
+++ b/app/views/user/manage-wishlist.hbs
@@ -180,7 +180,7 @@
 
                                     <div class="col-12 col-md-4">
 
-                                        <img src="/product-images/{{this._id}}.jpg" style="height:15rem; width:15rem;" alt="IMG-PRODUCT">
+                                        <img src="/product-images/{{this.images.[0]}}" style="height:15rem; width:15rem;" alt="IMG-PRODUCT">
                 
                                         <div class="text-secondary-d1 text-120">
                                             {{this.name}}
