--- a/app/views/user/login.hbs
+++ b/app/views/user/login.hbs
@@ -128,8 +128,13 @@
         {{/if}}
 
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary me-2" style="border-radius: 10px;">Login</button>
+            <button type="submit" class="btn btn-primary me-2 m-r-8" style="border-radius: 10px;">Login</button>
             <a href="/signup" class="btn btn-secondary" style="border-radius: 10px; background-color: #007bff;">Sign up</a>
         </div>
+
+        <div class="d-flex justify-content-center m-t-10">
+            <a href="/forgot-password">Forgot password?</a>
+        </div>
+        
     </form>
 </div>
