--- a/app/views/admin/add-product.hbs
+++ b/app/views/admin/add-product.hbs
@@ -4,16 +4,19 @@
 
 
     <form id="add-product-form" action="/admin/add-product" method="post" enctype="multipart/form-data">
+
       <div class="form-group">
         <label for="price">Product Id:</label>
         <div class="input-group">
           <input type="number" class="form-control" id="id" name="id" min="0" step="1" required>
         </div>
       </div>
+
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="name" name="name" required>
       </div>
+
       <div class="form-group">
         <label for="category">Category:</label>
         <select class="form-control" id="category" name="category" required>
@@ -23,10 +26,22 @@
           {{/each}}
         </select>
       </div>
+
       <div class="form-group">
         <label for="description">Description:</label>
         <textarea class="form-control" id="description" name="description" rows="5" required></textarea>
       </div>
+
+      <div class="form-group">
+        <label for="availableStock">Available Stock:</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Stock</span>
+          </div>
+          <input type="number" class="form-control" id="availableStock" name="availableStock" min="1" step="1" required>
+        </div>
+      </div>
+
       <div class="form-group">
         <label for="price">Price:</label>
         <div class="input-group">
@@ -36,6 +51,7 @@
           <input type="number" class="form-control" id="price" name="price" min="0" step="0.01" required>
         </div>
       </div>
+
       <div class="form-group">
         <label for="image">Image:</label>
         <div class="custom-file">
@@ -44,6 +60,8 @@
         </div>
         <div id="image-preview" class="mt-2"></div>
       </div>
+
+
       <button type="submit" class="btn btn-primary">Add Product</button>
       <button type="reset" class="btn btn-secondary ml-2">Reset</button>
       
