Product Stock configured in add and edit product

--- a/app/views/admin/edit-product.hbs
+++ b/app/views/admin/edit-product.hbs
@@ -1,17 +1,26 @@
+{{!-- ============================================== Edit-Product Page ============================================== --}}
+
+
 <section>
+
   <div class="container">
+
     <h1>Edit Product</h1>
+
     <form id="add-product-form" action="/admin/edit-product/{{productDetails._id}}" method="post" enctype="multipart/form-data">
+
       <div class="form-group">
         <label for="price">Product Id:</label>
         <div class="input-group">
           <input type="number" class="form-control" id="id" name="id" min="0" step="1" value="{{productDetails.id}}">
         </div>
       </div>
+
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="name" name="name" value="{{productDetails.name}}">
       </div>
+
       <div class="form-group">
         <label for="category">Category:</label>
         <select class="form-control" id="category" name="category" required>
@@ -21,10 +30,22 @@
           {{/each}}
         </select>
       </div>
+
       <div class="form-group">
         <label for="description">Description:</label>
         <textarea class="form-control" id="description" name="description" rows="5">{{productDetails.description}}</textarea>
       </div>
+
+      <div class="form-group">
+        <label for="availableStock">Available Stock:</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Stock</span>
+          </div>
+          <input type="number" class="form-control" id="availableStock" name="availableStock" min="1" step="1" value="{{productDetails.availableStock}}" required>
+        </div>
+      </div>
+
       <div class="form-group">
         <label for="price">Price:</label>
         <div class="input-group">
@@ -34,6 +55,7 @@
           <input type="number" class="form-control" id="price" name="price" min="0" step="0.01" value="{{productDetails.price}}">
         </div>
       </div>
+
       <div class="form-group">
         <label for="image">Image:</label>
         <img src="/product-images/{{productDetails._id}}.jpg" alt="" style="width: 100px;height:auto" id="imageView" class="pt-3">
@@ -43,10 +65,16 @@
         </div>
         <div id="image-preview" class="mt-2"></div>
       </div>
+
+
       <button type="submit" class="btn btn-primary">Edit Product</button>
       <button type="reset" class="btn btn-secondary ml-2">Reset</button>
+
+
     </form>
+
   </div>
+
 </section>
 
 
