--- a/app/views/user/password-set-new.hbs
+++ b/app/views/user/password-set-new.hbs
@@ -1,10 +1,43 @@
+{{!-- =============================================== Set NEW Password Page =============================================== --}}
+
 <style>
+
+    .form-container {
+        width: 300px;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+    .form-container input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+    }
+    .form-container button {
+        width: 100%;
+        padding: 10px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+    }
     .error {
         color: red;
     }
+
 </style>
+
+
+
+
 <script>
+
     function validateForm() {
+
         var newPassword = document.getElementById("newPassword").value;
         var confirmPassword = document.getElementById("confirmPassword").value;
         var newPasswordError = document.getElementById("newPasswordError");
@@ -12,21 +45,32 @@
 
         // Check if the passwords match
         if (newPassword !== confirmPassword) {
+
             confirmPasswordError.innerHTML = "Passwords do not match.";
             return false;
+
         } else {
+
             confirmPasswordError.innerHTML = "";
+
         }
 
         // Check if the password meets the required criteria
         var passwordPattern = /^(?=.*\d)(?=.*[a-zA-Z])(?=.*[!@#$%^&*]).{8,}$/;
+
         if (!passwordPattern.test(newPassword)) {
+
             newPasswordError.innerHTML = "Password must be at least 8 characters long and contain at least one numeric, one alphabet, and one special character (!@#$%^&*).";
             return false;
+
         } else {
+
             return true;
+
         }
+        
     }
+
 </script>
 
 
@@ -35,7 +79,9 @@
     <div class="form-container">
 
         <h2>Password Reset</h2>
+
         <form onsubmit="return validateForm()" action="/set-new-password" method="post">
+
             <label for="newPassword">New Password:</label>
             <input type="password" id="newPassword" name="newPassword" required>
             <span id="newPasswordError" class="error"></span><br><br>
@@ -45,6 +91,7 @@
             <span id="confirmPasswordError" class="error"></span><br><br>
 
             <button class="btn btn-success" type="submit">Reset Password</button>
+
         </form>
 
     </div>
