--- a/app/views/admin/view-products.hbs
+++ b/app/views/admin/view-products.hbs
@@ -1,3 +1,25 @@
+{{!-- ================================================== Admin-side Manage products page ================================================== --}}
+
+<style>
+    @keyframes blink-animation {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+    }
+
+    .blink {
+    animation: blink-animation 0.5s infinite;
+    }
+
+</style>
+
+
 
 <section>
 
@@ -24,6 +46,7 @@
                     <th scope="col">Description</th>
                     <th scope="col">Category</th>
                     <th scope="col">Price</th>
+                    <th scope="col">Stock</th>
                     <th scope="col">Image</th>
                     <th scope="col">Offers</th>
                     <th scope="col">Offer Action</th>
@@ -43,6 +66,13 @@
                         <td>{{this.description}}</td>
                         <td>{{this.category.name}}</td>
                         <td>₹ {{this.price}}</td>
+
+                        {{#if (lt this.availableStock 25)}}
+                        <td><span class="blink" style="color: red; font-weight: bold;">{{this.availableStock}} - Low Stock!!!</span></td>
+                        {{else}}
+                        <td>{{this.availableStock}}</td>
+                        {{/if}}
+                        
                         <td><img style="width: 50px; height: 50px" src="/product-images/{{images.[0]}}" alt="{{this.name}}"></td>
                         <td>{{this.productOffer}} %</td>
                         <td>
