Configured seperate Admin login page and it's layout
Added Favicon for Admin-side

--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -11,7 +11,7 @@
         <meta content="" name="description">
 
         {{!-- Favicon --}}
-        <link href="/admin-resources/img/favicon.ico" rel="icon">
+        <link rel="icon" type="image/png" href="/admin-resources/img/favicon.png"/>
 
         {{!-- Google Web Fonts --}}
         <link rel="preconnect" href="https://fonts.googleapis.com">
