--- a/app/views/admin/edit-product.hbs
+++ b/app/views/admin/edit-product.hbs
@@ -57,13 +57,29 @@
       </div>
 
       <div class="form-group">
-        <label for="image">Image:</label>
-        <img src="/product-images/{{productDetails._id}}.jpg" alt="" style="width: 100px;height:auto" id="imageView" class="pt-3">
+        
+        <label for="image">Product Images:</label>
+        {{#each productDetails.images}}
+
+          <img src="/product-images/{{this}}" alt="" style="width: 100px;height:auto" id="imageView" class="pt-3">
+
+          <a href="#" class="bi bi-trash" onclick="deleteImage('{{this}}', '{{../productDetails._id}}')"></a>
+
+        {{/each}}
+
+        {{#if singleProductImageDeletionerror}}
+
+          <p style="color: red;">{{singleProductImageDeletionerror}}</p>
+        
+        {{/if}}
+
         <div class="custom-file">
           <input type="file" class="custom-file-input" id="image" name="image" accept="image/*" multiple onchange="displayImage(event)">
           <label class="custom-file-label" for="image">Choose file</label>
         </div>
+
         <div id="image-preview" class="mt-2"></div>
+
       </div>
 
 
@@ -78,12 +94,46 @@
 </section>
 
 
-{{!-- Javascript Function to Display new image selected in the page instead of Existing Image --}}
+
+
 <script>
 
+  // Javascript Function to Display new image selected in the page instead of Existing Image
   function displayImage(event){
 
     document.getElementById('imageView').src = URL.createObjectURL(event.target.files[0])
+
+  }
+
+
+  // Javascript Function to delete single image of a product
+  function deleteImage(imageName, productId) {
+
+    event.preventDefault();
+
+    fetch('/admin/delete-single-product-image', {
+
+      method: 'POST',
+
+      body: JSON.stringify({ imageName: imageName, productId: productId }),
+
+      headers: {
+
+        'Content-Type': 'application/json'
+
+      }
+
+    })
+    .then(response => {
+
+      location.reload();
+
+    })
+    .catch(error => {
+
+      window.location.href = '/admin/error-page';
+      
+    });
 
   }
 
