Minor style issue fix

--- a/app/views/admin/admin-order-summary.hbs
+++ b/app/views/admin/admin-order-summary.hbs
@@ -1,6 +1,6 @@
 {{!-- ==============================Order Summary Page============================== --}}
 
-<div style="display: flex; justify-content: center; padding-top: 40px ; height: 100vh; margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5;">
+<div style="display: flex; justify-content: center; padding-top: 40px ; padding-bottom: 40px ; margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5; margin-bottom: 40px;">
 
     <div style="width: 95%; background-color: #fff; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
 
