--- a/app/views/admin/admin-home.hbs
+++ b/app/views/admin/admin-home.hbs
@@ -1,43 +1,130 @@
 <!-- Sale & Revenue Start -->
             <div class="container-fluid pt-4 px-4">
+
                 <div class="row g-4">
+
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-line fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Today Sale</p>
+                                <p class="mb-2">Today's Sales</p>
                                 <h6 class="mb-0">$1234</h6>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-bar fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Total Sale</p>
+                                <p class="mb-2">Today's Orders</p>
                                 <h6 class="mb-0">$1234</h6>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-area fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Today Revenue</p>
+                                <p class="mb-2">Total Sales</p>
                                 <h6 class="mb-0">$1234</h6>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-pie fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Total Revenue</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <p class="mb-2">Total Orders</p>
+                                <h6 class="mb-0">{{platformUsersCount}}</h6>
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fas fa-cart-plus fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Products</p>
+                                <h6 class="mb-0">{{productsCount}}</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fa fa-table fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Categories</p>
+                                <h6 class="mb-0">{{getProductCategoriesCount}}</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fas fa-users fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Users</p>
+                                <h6 class="mb-0">{{platformUsersCount}}</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fas fa-user-lock fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Blocked Users</p>
+                                <h6 class="mb-0">{{blockedPlatformUsersCount}}</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="far fa-clipboard fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Placed Orders</p>
+                                <h6 class="mb-0">{{placedOrdersCount}}</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fas fa-truck fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Shipped Orders</p>
+                                <h6 class="mb-0">{{shippedOrdersCount}}</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fas fa-tasks fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Delivered Orders</p>
+                                <h6 class="mb-0">{{deliveredOrdersCount}}</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fas fa-thumbs-down fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Cancelled Orders</p>
+                                <h6 class="mb-0">{{cancelledOrdersCount}}</h6>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
+
             </div>
             <!-- Sale & Revenue End -->
 
