--- a/app/views/admin/admin-home.hbs
+++ b/app/views/admin/admin-home.hbs
@@ -5,7 +5,7 @@
 
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-line fa-3x text-primary"></i>
+                            <i class="fas fa-rupee-sign fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Today's Sales</p>
                                 <h6 class="mb-0">$1234</h6>
@@ -25,7 +25,7 @@
 
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-area fa-3x text-primary"></i>
+                            <i class="fas fa-rupee-sign fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Total Sales</p>
                                 <h6 class="mb-0">$1234</h6>
