--- a/app/views/admin/admin-home.hbs
+++ b/app/views/admin/admin-home.hbs
@@ -8,7 +8,7 @@
                             <i class="fas fa-rupee-sign fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Today's Sales</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <h6 class="mb-0">₹ {{todaysSales}}</h6>
                             </div>
                         </div>
                     </div>
@@ -17,8 +17,8 @@
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-bar fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Today's Orders</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <p class="mb-2">Sales Count</p>
+                                <h6 class="mb-0">{{todaysSalesCount}}</h6>
                             </div>
                         </div>
                     </div>
@@ -28,17 +28,17 @@
                             <i class="fas fa-rupee-sign fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Total Sales</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <h6 class="mb-0">₹ {{totalSales}}</h6>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-pie fa-3x text-primary"></i>
+                            <i class="fa fa-chart-bar fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Total Orders</p>
-                                <h6 class="mb-0">{{platformUsersCount}}</h6>
+                                <p class="mb-2">Sales Count</p>
+                                <h6 class="mb-0">{{totalSalesCount}}</h6>
                             </div>
                         </div>
                     </div>
