--- a/app/views/admin/admin-home.hbs
+++ b/app/views/admin/admin-home.hbs
@@ -169,16 +169,19 @@
 
                     <div class="table-responsive">
 
-                        <table class="table text-start align-middle table-bordered table-hover mb-0">
+                        <table id="admin-dashboard-orders-table" class="table text-start align-middle table-bordered table-hover mb-0">
 
                             <thead>
 
                                 <tr class="text-dark">
-                                    <th scope="col"><input class="form-check-input" type="checkbox"></th>
                                     <th scope="col">Date</th>
-                                    <th scope="col">Invoice</th>
-                                    <th scope="col">Customer</th>
-                                    <th scope="col">Amount</th>
+                                    <th scope="col">User</th>
+                                    <th scope="col">Actual Price</th>
+                                    <th scope="col">Coupon Discounts</th>
+                                    <th scope="col">Product Discounts</th>
+                                    <th scope="col">Category Discounts</th>
+                                    <th scope="col">Final Price</th>
+                                    <th scope="col">Payment Method</th>
                                     <th scope="col">Status</th>
                                     <th scope="col">Action</th>
                                 </tr>
@@ -187,15 +190,32 @@
 
                             <tbody>
 
-                                <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-                                </tr>
+                                {{#each platformOrdersData}}
+
+                                    <tr>
+                                        <td>{{this.date}}</td>
+                                        <td>{{this.userName}}</td>
+                                        <td>{{this.actualOrderValue}}</td>
+                                        <td>{{this.couponDiscount}}</td>
+                                        <td>{{this.productOfferDiscount}}</td>
+                                        <td>{{this.categoryOfferDiscount}}</td>
+                                        <td>{{this.orderValue}}</td>
+                                        <td>{{this.paymentMethod}}</td>
+                                        <td>{{this.orderStatus}}</td>
+                                        
+                                        {{!-- ======================== Details ======================== --}}
+                                        <td>
+                                        
+                                            <form method="POST" action="/admin/single-order-details">
+                                                <button name="orderId" value="{{this._id}}" type="submit"
+                                                    class="btn btn-primary animate__animated animate__fadeInLeft">View</button>
+                                            </form>
+                                        
+                                        </td>
+
+                                    </tr>
+
+                                {{/each}}
 
                             </tbody>
 
@@ -208,6 +228,8 @@
             </div>
             <!-- Recent Sales Table  End -->
 
+
+            {{!-- Scripts for Displaying Charts and loading Jquery --}}
             <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
