Added menu item in admin layout for Admin sales report

--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -82,6 +82,8 @@
 
                         <a href="/admin" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
 
+                        <a href="/admin/sales" class="nav-item nav-link"><i class="fas fa-chart-pie me-2"></i>Sales Report</a>
+
                         <div class="nav-item dropdown">
                             <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-cart-plus me-2"></i>Products</a>
                             <div class="dropdown-menu bg-transparent border-0">
