--- a/app/views/admin/sales-report.hbs
+++ b/app/views/admin/sales-report.hbs
@@ -147,7 +147,9 @@
 
             <a href="/admin/sales/total" class="btn btn-primary mx-2 my-3" style="font-size: small">Total sales</a>
 
-            <a href="/admin/sales/download-report" class="btn btn-primary mx-2 my-3" style="background-color: #ffd900;color: #000000; font-size: x-small;">Download Sales Report</a>
+            <form id="downloadForm" action="/admin/sales/download-report" method="POST">
+                <button type="submit" class="btn btn-primary mx-2 my-3" style="background-color: #ffd900;color: #000000; font-size: x-small;">Download Sales Report</button>
+            </form>
 
             <div style="margin-left: auto;" class="mt-3">
 
