--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -328,8 +328,8 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 .logo img {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 180px;
+  max-height: 45px;
 }
 
 
