Added Category wise product listing in user-side

--- a/app/views/user/user-home.hbs
+++ b/app/views/user/user-home.hbs
@@ -92,7 +92,7 @@
         <div class="block1 wrap-pic-w">
           <img src="/product-category-images/{{this.categoryImage}}" style="height:10rem; width:12.5rem;" alt="IMG-BANNER">
 
-          <a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+          <a href="/category/{{this.name}}" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
             <div class="block1-txt-child1 flex-col-l">
               <span class="block1-name ltext-102 trans-04 p-b-8">
                 {{this.name}}
