Added pages to add list and delete banner Image

--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -84,6 +84,16 @@
 
                         <a href="/admin/sales" class="nav-item nav-link"><i class="fas fa-chart-pie me-2"></i>Sales Report</a>
 
+                        
+                        <div class="nav-item dropdown">
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-cart-plus me-2"></i>Banner Images</a>
+                            <div class="dropdown-menu bg-transparent border-0">
+                                <a href="/admin/banner-image/view" class="dropdown-item">Manage Images</a>
+                                <a href="/admin/banner-image/add" class="dropdown-item">Add Images</a>
+                            </div>
+                        </div>
+
+                        
                         <div class="nav-item dropdown">
                             <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-cart-plus me-2"></i>Products</a>
                             <div class="dropdown-menu bg-transparent border-0">
