--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -86,7 +86,7 @@
 
                         
                         <div class="nav-item dropdown">
-                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-cart-plus me-2"></i>Banner Images</a>
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-images me-2"></i>Banner Images</a>
                             <div class="dropdown-menu bg-transparent border-0">
                                 <a href="/admin/banner-image/view" class="dropdown-item">Manage Images</a>
                                 <a href="/admin/banner-image/add" class="dropdown-item">Add Images</a>
