Configured user home to load the banner images added by admin

--- a/app/views/user/user-home.hbs
+++ b/app/views/user/user-home.hbs
@@ -3,81 +3,43 @@
 
 <!-- Slider -->
 <section class="section-slide">
+
   <div class="wrap-slick1">
+
     <div class="slick1">
-      <div class="item-slick1" style="background-image: url(/platform-images/slide-01.jpg);">
-        <div class="container h-full">
-          <div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
-            <div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
-              <span class="ltext-101 cl2 respon2">
-                Women Collection 2018
-              </span>
-            </div>
-              
-            <div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
-              <h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-                NEW SEASON
-              </h2>
-            </div>
-              
-            <div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
-              <a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-                Shop Now
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="item-slick1" style="background-image: url(/platform-images/slide-02.jpg);">
-        <div class="container h-full">
-          <div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
-            <div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
-              <span class="ltext-101 cl2 respon2">
-                Men New-Season
-              </span>
-            </div>
-              
-            <div class="layer-slick1 animated visible-false" data-appear="lightSpeedIn" data-delay="800">
-              <h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-                Jackets & Coats
-              </h2>
-            </div>
-              
-            <div class="layer-slick1 animated visible-false" data-appear="slideInUp" data-delay="1600">
-              <a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-                Shop Now
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
+      {{#each bannerImages}}
 
-      <div class="item-slick1" style="background-image: url(/platform-images/slide-03.jpg);">
-        <div class="container h-full">
-          <div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
-            <div class="layer-slick1 animated visible-false" data-appear="rotateInDownLeft" data-delay="0">
-              <span class="ltext-101 cl2 respon2">
-                Men Collection 2018
-              </span>
-            </div>
-              
-            <div class="layer-slick1 animated visible-false" data-appear="rotateInUpRight" data-delay="800">
-              <h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-                New arrivals
-              </h2>
-            </div>
-              
-            <div class="layer-slick1 animated visible-false" data-appear="rotateIn" data-delay="1600">
-              <a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-                Shop Now
-              </a>
+        <div class="item-slick1" style="background-image: url(/banner-images/{{this.bannerImage}});">
+          <div class="container h-full">
+            <div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
+              <div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
+                <span class="ltext-101 cl2 respon2">
+                  {{this.subHeading}}
+                </span>
+              </div>
+                
+              <div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
+                <h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
+                  {{this.heading}}
+                </h2>
+              </div>
+                
+              <div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
+                <a href="{{this.redirectLink}}" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+                  View
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+
+      {{/each}}
+
     </div>
+
   </div>
+
 </section>
 
 
