Final Testing CI-CD Branch

--- a/app/views/user/user-home.hbs
+++ b/app/views/user/user-home.hbs
@@ -291,7 +291,7 @@
             <div class="block2-pic hov-img0">
               <img src="/product-images/{{this.images.[0]}}" style="height:15rem; width:15rem;" alt="IMG-PRODUCT">
               <button class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04" onclick="addToCart('{{this._id}}', '{{this.name}}'); return false;">
-                Add to Cart - Test
+                Add to Cart
               </button>
             </div>
 
